<resources>
    <string name="app_name">Meal Mate</string>
    <string name="splash_image">SplashImage</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="plz_login">Please login to your account</string>
    <string name="sign_up">Sign UP</string>
    <!--<string name="default_web_client_id">488328510396-iq5grvp32pundf185ohhod3uldvad1lg.apps.googleusercontent.com</string>-->
    <string name="default_web_client_id">123.apps.googleusercontent.com</string>
    <string name="sign_up_with_email">Sign up with email</string>
    <string name="continue_as_guest">Continue as Guest</string>
    <string name="log_in_account">Log In account</string>
    <string name="n_a_sign_up">Don\'t have an account? Sign Up</string>
    <string name="create_account">Create a new account</string>
    <string name="fill_the_form">Please fill in the form to continue</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="a_a_sign_in">Have an account? Login</string>
    <string name="favorites">Favorites</string>
    <string name="home">Home</string>
    <string name="plans">Week Plan</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="meal_image">MealImage</string>
    <string name="ingredient_image">Ingredient Image</string>
    <string name="categories">Categories</string>
    <string name="area">Area</string>
    <string name="ingredients">Ingredients</string>
    <string name="backup">Backup</string>
    <string name="to_day_mreal">Mreal Of The Day</string>
    <string name="calendar">Calendar</string>
    <string name="signout">SignOut</string>
    <string name="guest">Guest</string>
</resources>