<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/searchFragment"
            android:icon="@drawable/search"
            android:title="@string/search" />
        <item
            android:id="@+id/favoritesFragment"
            android:icon="@drawable/diagnosis"
            android:title="@string/favorites" />
        <item
            android:id="@+id/plansFragment"
            android:icon="@drawable/calendar"
            android:title="@string/plans" />
    </group>
</menu>