<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_home"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.alharbi.mealmate.ui.start.home.view.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.alharbi.mealmate.ui.start.search.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" />
    <fragment
        android:id="@+id/favoritesFragment"
        android:name="com.alharbi.mealmate.ui.start.favorites.view.FavoritesFragment"
        android:label="@string/favorites"
        tools:layout="@layout/fragment_favorites" />
    <fragment
        android:id="@+id/plansFragment"
        android:name="com.alharbi.mealmate.ui.start.PlansFragment"
        android:label="@string/plans"
        tools:layout="@layout/fragment_plans" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.alharbi.mealmate.ui.start.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
</navigation>