<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.authenticate.view.AuthFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/splash_image"
        android:foreground="@drawable/gradient_shape"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/auth_image" />

    <Button
        android:id="@+id/btnSingUpEmail"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/sign_up_with_email"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="@+id/btnGoogleSignIn"
        app:layout_constraintStart_toStartOf="@+id/btnGoogleSignIn"
        app:layout_constraintTop_toTopOf="@+id/guideline7" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/btnGoogleSignIn"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/btnSingUpEmail" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/btnGoogleSignIn"
        android:layout_width="0dp"
        android:layout_height="48dp"
        app:layout_constraintBottom_toTopOf="@+id/btnFacebookLogin"
        app:layout_constraintEnd_toEndOf="@+id/btnFacebookLogin"
        app:layout_constraintStart_toStartOf="@+id/btnFacebookLogin"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/btnFacebookLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btnLoginAccount"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/btnGoogleSignIn" />

    <Button
        android:id="@+id/btnLoginAccount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/selver"
        android:text="@string/log_in_account"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btnGuest"
        app:layout_constraintEnd_toEndOf="@+id/btnFacebookLogin"
        app:layout_constraintStart_toStartOf="@+id/btnFacebookLogin"
        app:layout_constraintTop_toBottomOf="@+id/btnFacebookLogin" />

    <Button
        android:id="@+id/btnGuest"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/dark_brown"
        android:text="@string/continue_as_guest"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnLoginAccount"
        app:layout_constraintStart_toStartOf="@+id/btnLoginAccount"
        app:layout_constraintTop_toBottomOf="@+id/btnLoginAccount" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

</androidx.constraintlayout.widget.ConstraintLayout>