<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.mealdetails.view.MealDetailsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageMealD"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/meal_image"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/lost_connection" />

        <TextView
            android:id="@+id/tvAreaD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/rvIngredientsD"
            app:layout_constraintTop_toTopOf="@+id/tvCategoryD"
            tools:text="TextView" />

        <TextView
            android:id="@+id/tvCategoryD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/rvIngredientsD"
            app:layout_constraintEnd_toStartOf="@+id/addCalendar"
            app:layout_constraintStart_toEndOf="@+id/tvAreaD"
            app:layout_constraintTop_toBottomOf="@+id/imageMealD"
            tools:text="TextView" />

        <TextView
            android:id="@+id/tvMealNameD"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:background="@drawable/gradient_up_shape"
            android:gravity="bottom|center"
            android:textColor="@color/orange_yellow"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageMealD"
            app:layout_constraintEnd_toEndOf="@+id/imageMealD"
            app:layout_constraintStart_toStartOf="@+id/imageMealD"
            tools:text="tvMealName" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvIngredientsD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAreaD" />

        <TextView
            android:id="@+id/tvInstructionD"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:textDirection="ltr"
            android:textSize="16sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="@+id/rvIngredientsD"
            app:layout_constraintStart_toStartOf="@+id/rvIngredientsD"
            app:layout_constraintTop_toBottomOf="@+id/rvIngredientsD"
            tools:text="tvInstruction" />

        <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
            android:id="@+id/youtubeMealD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvInstructionD" />

        <ImageView
            android:id="@+id/addFavorites"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="12dp"
            app:layout_constraintBottom_toTopOf="@+id/rvIngredientsD"
            app:layout_constraintEnd_toEndOf="@+id/rvIngredientsD"
            app:layout_constraintTop_toBottomOf="@+id/imageMealD"
            app:srcCompat="@drawable/favorites_add"
            android:contentDescription="@string/favorites" />

        <ImageView
            android:id="@+id/addPlan"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/plans"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/addFavorites"
            app:layout_constraintEnd_toStartOf="@+id/addFavorites"
            app:layout_constraintTop_toTopOf="@+id/addFavorites"
            app:srcCompat="@drawable/plan_add" />

        <ImageView
            android:id="@+id/addCalendar"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/calendar"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/addPlan"
            app:layout_constraintEnd_toStartOf="@+id/addPlan"
            app:layout_constraintTop_toTopOf="@+id/addPlan"
            app:srcCompat="@drawable/diagnosis" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
